# lookup

./: Cargo.toml  README.md
src/: fft.rs  inner_product.rs  kate_commitment.rs  lib.rs  lookup.rs  pedersen_commitment.rs  range_proof.rs  utils.rs
src/lookup/: table.rs
